crates/php-parser/tests/snapshots/corpus__comments_2.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(& result.program)
---
{
  "stmts": [],
  "span": {
    "start": 0,
    "end": 48
  }
}
